# when-the-button-lies

./: MERGE.md  Makefile  README.md  REPORT.md  make_figure.py  pyproject.toml
results/: pilot_results.md
results/raw/: llm_conflict_prompt.json  wm_c0.json
scripts/: run_webworld.py
tests/: test_pilot_data.py
